(executable
 (name pp)
 (modules pp)
 (libraries ppx_refinement_type ppxlib))

(rule
 (targets frontend.actual.out)
 (deps (:pp pp.exe) (:input frontend.ml))
 (action (with-stdout-to
           %{targets}
          (run ./%{pp} -no-color --impl %{input} -null))))

(rule
 (alias runtest)
 (action (diff frontend.expected.out frontend.actual.out)))

(test
  (name frontend)
  (modules frontend)
  (preprocess (pps ppx_refinement_type)))
